# container-apps-event-driven-jobs-tutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  index.js  main.py  pyproject.toml
.github/workflows/: manual-job-python-AutoDeployTrigger.yml
